Bug 360668 - No visible mini-icon and strange tooltip
Summary: No visible mini-icon and strange tooltip
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: Kubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
: 361493 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-03-17 16:08 UTC by Laurent Bonnaud
Modified: 2024-12-23 18:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (25.99 KB, image/png)
2016-03-24 14:15 UTC, Laurent Bonnaud
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Bonnaud 2016-03-17 16:08:33 UTC
The applet is in the systray, but its mini-icon is not visible.
The tooltip contains <qt> and <bt> entities.

Here are error messages from my ~/.xession-errors file that might be relevant:

Qt: Session management error: networkIdsList argument is NULL
networkmanager-qt: void NetworkManager::NetworkManagerPrivate::propertiesChanged(const QVariantMap&) Unhandled property "Devices"

My system has neon packages as of today, but the plasma-nm is more recent in the kubuntu-ppa/backports PPA:

Package: plasma-nm
Version: 4:5.5.4-0ubuntu1~ubuntu15.10~ppa1

$ apt-cache policy plasma-nm
plasma-nm:
  Installed: 4:5.5.4-0ubuntu1~ubuntu15.10~ppa1
  Candidate: 4:5.5.4-0ubuntu1~ubuntu15.10~ppa1
  Version table:
 *** 4:5.5.4-0ubuntu1~ubuntu15.10~ppa1 0
        500 http://ppa.launchpad.net/kubuntu-ppa/backports/ubuntu/ wily/main amd64 Packages
        100 /var/lib/dpkg/status
     4:5.5.3+git20160316.1404+15.10-0 0
        500 http://archive.neon.kde.org.uk/unstable/ wily/main amd64 Packages
[...]


Reproducible: Always
Comment 1 Laurent Bonnaud 2016-03-20 09:10:52 UTC
I also tried with the plasma-nm package from neon and the problem is the same.
Comment 2 Jan Grulich 2016-03-24 13:07:29 UTC
The info from .xsession-errors is not relevant.

Could you please attach a screenshot of your problem?
Comment 3 Laurent Bonnaud 2016-03-24 14:15:26 UTC
Created attachment 98058 [details]
screenshot

Here it is (sorry I forgot the upload it).

The screenshot is from the day I reported the problem.
Today, with more recent packages, the mini-icon is visible, but I still get the <qt> element.
Comment 4 Jan Grulich 2016-04-04 11:49:25 UTC
Git commit d130ffac42df64d6f8c431b7644bfd8d9ca9fd6f by Jan Grulich.
Committed on 04/04/2016 at 11:49.
Pushed by grulich into branch 'master'.

Improve tooltip displaying current active connections

- use just '\n' to separate connections
- sort connections by type

M  +52   -13   libs/declarative/networkstatus.cpp
M  +16   -0    libs/declarative/networkstatus.h

http://commits.kde.org/plasma-nm/d130ffac42df64d6f8c431b7644bfd8d9ca9fd6f
Comment 5 Jan Grulich 2016-04-04 11:51:09 UTC
Git commit 4217dbed985314534900eb5e0629b3cf6649b465 by Jan Grulich.
Committed on 04/04/2016 at 11:50.
Pushed by grulich into branch 'Plasma/5.6'.

Improve tooltip displaying current active connections

- use just '\n' to separate connections
- sort connections by type

M  +52   -13   libs/declarative/networkstatus.cpp
M  +16   -0    libs/declarative/networkstatus.h

http://commits.kde.org/plasma-nm/4217dbed985314534900eb5e0629b3cf6649b465
Comment 6 Laurent Bonnaud 2016-04-04 11:58:04 UTC
Thank you for the fix!
Comment 7 Jan Grulich 2016-04-07 12:42:04 UTC
*** Bug 361493 has been marked as a duplicate of this bug. ***
Comment 8 Ben Cooksley 2024-12-23 18:26:02 UTC
Bulk transfer as requested in T17796