Improve tooltip displaying current active connections

- use just '\n' to separate connections
- sort connections by type

BUG:360668